fix(style): card type text letter-spacing and line-height

--- a/style.css
+++ b/style.css
@@ -52,7 +52,8 @@ picture>img {
 
 .product-preview-card__type {
   color: var(--dark-grayish-blue);
-  letter-spacing: 0.375rem;
+  letter-spacing: 0.3125rem;
+  line-height: 0.9375rem;
   font-size: 0.75rem;
   font-weight: 500;
 }
